Background Image Updated

--- a/CSS-FOLDER/master.css
+++ b/CSS-FOLDER/master.css
@@ -4,7 +4,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image:        url("/Image-Folder/wp4286137-stranger-things-4k-wallpapers.jpg");
+    background-image:url("https://wallpapercave.com/wp/wp4286137.jpg");
     background-repeat: no-repeat;
     background-size: 100% auto;
     background-blend-mode: darken;
