--- a/CSS-FOLDER/master.css
+++ b/CSS-FOLDER/master.css
@@ -5,10 +5,11 @@ body {
     margin: 0;
     padding: 0;
     background-image:url("https://wallpapercave.com/wp/wp4286137.jpg");
+    background-position: center center;
     background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-blend-mode: darken;
-   
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
 }
 
 /* Whole Page Content Container */
